<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.punked.musicalstructureapp.MainActivity">
    <TextView
        android:id="@+id/main_activity_text"
        android:text="@string/main_activity_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center_horizontal"/>
    <LinearLayout
        android:layout_below="@id/main_activity_text"
        android:id="@+id/top_row"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/artists"
        style="@style/button_style"

        android:textColor="@color/colorPrimary"
            android:text="@string/artists"
            android:layout_marginRight="4dp"/>

        <Button
            android:id="@+id/albums"
            style="@style/button_style"
            android:text="@string/albums"
            android:layout_marginLeft="4dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_row"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/top_row"
        android:orientation="horizontal">

        <Button
            android:id="@+id/songs"
            style="@style/button_style"
            android:text="@string/songs"
            android:layout_marginRight="4dp" />

        <Button
            android:id="@+id/titles"
            style="@style/button_style"
            android:text="@string/titles"
            android:layout_marginLeft="4dp"/>
    </LinearLayout>
    <Button
        android:id="@+id/exit"
        android:layout_marginTop="64dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/bottom_row"
        android:layout_width="150dp"
        android:layout_height="40dp"
        style="@style/button_style"
        android:text="@string/exit"/>


</RelativeLayout>
